Edit user on backend
