# backend/routes/userRoutes.js
@@ -13,6 +13,7 @@ router.patch("/resetPassword/:token", authController.resetPassword);
 router.use(authController.protect);
 router.patch("/updateMyPassword", authController.updatePassword);
 router.get("/me", userController.getMe, userController.getUser);
+router.patch("/updateMe", userController.updateMe);
 router.delete("/deleteMe", userController.deleteMe);
 
 module.exports = router;
